# langgraph-ollama-workflow

./: .env.example  .gitignore  README.md  custom_test.py  fallback_test.py  ollama_workflow.py  ollama_workflow_refactored.py  performance_test.py  pyproject.toml  quick_slack_test.py  quick_test.py  requirements.txt  simple_workflow.py  slack_setup_helper.py  test_context7_review.py  test_enhanced_workflow.py  test_full_response.py  test_slack_integration.py  test_with_mock_webhook.py
Docs/: ワークフロー結果_20250831_235847.md  ワークフロー結果_20250901_000720.md
src/: main.py  workflow.py
src/config/: langfuse_config.py  settings.py
src/core/: state.py
src/nodes/: __init__.py  documentation.py  input.py  notification.py  parallel_search.py  processing.py  query_generation.py  review.py  search.py
src/services/: documentation.py  llm.py  notification.py  review.py  search.py
src/utils/: datetime_utils.py  helpers.py
tests/: __init__.py  test_config.py  test_datetime_utils.py  test_helpers.py  test_llm_service.py  test_state.py
